<resources>
    <string name="app_name">ToDoList</string>
    <string name="title_activity_add_task">AddTaskActivity</string>
    <string name="etDesc_hint">Describe Your Task</string>
    <string name="tvPriority">Priority</string>
    <string name="high_priority">HIGH</string>
    <string name="medium_priority">MEDIUM</string>
    <string name="low_priority">LOW</string>
    <string name="addButton">ADD</string>
</resources>
